--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
 		height:500px;
 		box-sizing:border-box;
 		border-radius:22;
-		padding:85px 60px;
+		padding:50px 55px;
 		margin:auto;
 		margin-top:50px;
 
@@ -60,6 +60,7 @@
 	{
 		background:#4a63e7;
 		color:white;
+		transform: scale(1.1);
 		
 		
 	}
@@ -67,6 +68,29 @@
 		margin:0px 120px;
 	}
 
+
+	.secondsection h2 ::after 
+	{
+    content: "";
+    background: #FF5959;
+    border-radius: 25px;
+    display: block;
+    height: 5px;
+    margin-top: 14px;
+    width: 30px;
+    }
+
+	.expwidth
+	{
+		margin-left:50px;
+	}
+
+	.vl 
+	{
+     border-left: 2px solid black;
+     height: 100px;
+	 margin: 0px 90px;
+    }
 
 
 	
